fix core serialization tests by taking aggregation plugin into account when building named xcontent registry. These tests use composite aggregation and because this aggregation moved to aggregation module as part of this change these tests need this tweak.